--- a/db_setup/organizers_db.ipynb
+++ b/db_setup/organizers_db.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "e01d5c9d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "25ae81e4",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "e891a63c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "bf1566c1",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "0789d239",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "b984a7b7",
    "metadata": {},
    "outputs": [],
@@ -176,6 +176,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d1918ac3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sql = '''create table organizers(\n",
+    "#     org_id varchar(50) not null,\n",
+    "#     name varchar (254),\n",
+    "#     primary key (org_id)\n",
+    "# )'''\n",
+    "# cursor.execute(sql)\n",
+    "# cursor.connection.commit()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "158073d5",
    "metadata": {},
@@ -185,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "e82507fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('1', '1', 0, '2', '3'),)"
+       "()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "c0084dc2",
    "metadata": {},
    "outputs": [
@@ -219,7 +235,7 @@
        "()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "2a34efaf",
    "metadata": {},
    "outputs": [
@@ -243,7 +259,7 @@
        "()"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,12 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "52d7e513",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql=\"drop table banking_info\"\n",
+    "sql=\"drop table organizers\"\n",
     "cursor.execute(sql)\n",
     "cursor.connection.commit()"
    ]
