extracting max org id from contact info table during new account creation

--- a/db_setup/organizers_db.ipynb
+++ b/db_setup/organizers_db.ipynb
@@ -201,6 +201,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "7f948cf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None,)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor = get_db_cursor()\n",
+    "sql=\"select max(cast(org_id as unsigned)) from contact_info\"\n",
+    "cursor.execute(sql)\n",
+    "cursor.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "e82507fc",
    "metadata": {},
@@ -281,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "52d7e513",
    "metadata": {},
    "outputs": [],
