--- a/db_setup/organizers_db.ipynb
+++ b/db_setup/organizers_db.ipynb
@@ -225,17 +225,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "e82507fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "()"
+       "(('1', '1', 0, '2', '3'),\n",
+       " ('10', '1', 1, '23sjkdbfj', '6'),\n",
+       " ('11', '1', 0, '23sjkdbfj', '6'),\n",
+       " ('2', '1', 0, '3', '6'),\n",
+       " ('3', '1', 1, '3', '6'),\n",
+       " ('4', '1', 1, '338', '6'),\n",
+       " ('5', '1', 1, 'sjkdbfj', '6'),\n",
+       " ('6', '1', 1, '23sjkdbfj', '6'),\n",
+       " ('7', '1', 0, '23sjkdbfj', '6'),\n",
+       " ('8', '1', 0, '23sjkdbfj', '6'),\n",
+       " ('9', '1', 0, '23sjkdbfj', '6'))"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,17 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "id": "c0084dc2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "()"
+       "(('1', '5', '4', '6'),)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,17 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "2a34efaf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "()"
+       "(('1', '7', '8', '9', '10', '11'),)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
