--- a/db_setup/organizers_db.ipynb
+++ b/db_setup/organizers_db.ipynb
@@ -225,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "id": "e82507fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('1', '1', 0, '2', '3'),\n",
-       " ('10', '1', 1, '23sjkdbfj', '6'),\n",
+       "(('10', '1', 1, '23sjkdbfj', '6'),\n",
        " ('11', '1', 0, '23sjkdbfj', '6'),\n",
+       " ('12', '1', 0, '2', '3'),\n",
        " ('2', '1', 0, '3', '6'),\n",
        " ('3', '1', 1, '3', '6'),\n",
        " ('4', '1', 1, '338', '6'),\n",
@@ -245,7 +245,7 @@
        " ('9', '1', 0, '23sjkdbfj', '6'))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,17 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "c0084dc2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('1', '5', '4', '6'),)"
+       "(('12', '5', '4', '6'),)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,17 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "2a34efaf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('1', '7', '8', '9', '10', '11'),)"
+       "(('12', '7', '8', '9', '10', '11'),)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
