--- a/db_setup/organizers_db.ipynb
+++ b/db_setup/organizers_db.ipynb
@@ -225,27 +225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "id": "e82507fc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('10', '1', 1, '23sjkdbfj', '6'),\n",
-       " ('11', '1', 0, '23sjkdbfj', '6'),\n",
-       " ('12', '1', 0, '2', '3'),\n",
-       " ('2', '1', 0, '3', '6'),\n",
-       " ('3', '1', 1, '3', '6'),\n",
-       " ('4', '1', 1, '338', '6'),\n",
-       " ('5', '1', 1, 'sjkdbfj', '6'),\n",
-       " ('6', '1', 1, '23sjkdbfj', '6'),\n",
-       " ('7', '1', 0, '23sjkdbfj', '6'),\n",
-       " ('8', '1', 0, '23sjkdbfj', '6'),\n",
-       " ('9', '1', 0, '23sjkdbfj', '6'))"
+       "()"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,17 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "c0084dc2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('12', '5', '4', '6'),)"
+       "()"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,17 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "id": "2a34efaf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('12', '7', '8', '9', '10', '11'),)"
+       "()"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,15 +305,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "id": "52d7e513",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql=\"drop table organizers\"\n",
-    "cursor.execute(sql)\n",
-    "cursor.connection.commit()"
+    "# sql=\"truncate table contact_info\"\n",
+    "# cursor.execute(sql)\n",
+    "# cursor.connection.commit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "014502fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
