started oauth flow

--- a/db_setup/organizers_db.ipynb
+++ b/db_setup/organizers_db.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "e01d5c9d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "25ae81e4",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e891a63c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "bf1566c1",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "0789d239",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "b984a7b7",
    "metadata": {},
    "outputs": [],
@@ -114,6 +114,23 @@
    "metadata": {},
    "source": [
     "# Create Tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "72b48270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sql = '''create table user(\n",
+    "# id varchar(256),\n",
+    "# name varchar(256) not null,\n",
+    "# email varchar(256) unique not null,\n",
+    "# primary key (id)\n",
+    "# )'''\n",
+    "# cursor.execute(sql)\n",
+    "# cursor.connection.commit()"
    ]
   },
   {
